--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-# NPM
-/node_modules
-npm-*
-/package-lock.json
-
 # Development Env (Jetbrains, Vim, macOS)
 .idea/
 *.swp
 .DS_Store
+
+/*/node_modules
+/*/package-lock.json
